--- a/03 - Flujos de Control/Prep_Course_Homework_03-Resuelto.ipynb
+++ b/03 - Flujos de Control/Prep_Course_Homework_03-Resuelto.ipynb
@@ -16,6 +16,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Es mayor a 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "entero = 2\n",
+    "if(entero>0):\n",
+    "    print(\"Es mayor a 0\")\n",
+    "elif (entero==0):\n",
+    "    print(\"Es cero\")\n",
+    "else:\n",
+    "    print(\"Es menor a 0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -46,6 +69,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b y c son de distinto tipo de dato\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = 1\n",
+    "c = 3 + 4j\n",
+    "if(type(b)==type(c)):\n",
+    "    print(\"b y c son del mismo tipo de dato\")\n",
+    "else:\n",
+    "    print(\"b y c son de distinto tipo de dato\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -71,6 +116,46 @@
    "metadata": {},
    "source": [
     "3) Para los valores enteros del 1 al 20, imprimir por pantalla si es par o impar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 es impar\n",
+      "2 es par\n",
+      "3 es impar\n",
+      "4 es par\n",
+      "5 es impar\n",
+      "6 es par\n",
+      "7 es impar\n",
+      "8 es par\n",
+      "9 es impar\n",
+      "10 es par\n",
+      "11 es impar\n",
+      "12 es par\n",
+      "13 es impar\n",
+      "14 es par\n",
+      "15 es impar\n",
+      "16 es par\n",
+      "17 es impar\n",
+      "18 es par\n",
+      "19 es impar\n",
+      "20 es par\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,21):\n",
+    "    if(i%2==0):\n",
+    "        print(i,\"es par\")\n",
+    "    else: \n",
+    "        print(i,\"es impar\")"
    ]
   },
   {
@@ -122,6 +207,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 elevado a la potencia de 3 es:  0\n",
+      "1 elevado a la potencia de 3 es:  1\n",
+      "2 elevado a la potencia de 3 es:  8\n",
+      "3 elevado a la potencia de 3 es:  27\n",
+      "4 elevado a la potencia de 3 es:  64\n",
+      "5 elevado a la potencia de 3 es:  125\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (0,6):\n",
+    "    print(i, \"elevado a la potencia de 3 es: \", i**3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -152,6 +260,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "soy  1 en el ciclo:  1\n",
+      "soy  2 en el ciclo:  2\n",
+      "soy  3 en el ciclo:  3\n",
+      "soy  4 en el ciclo:  4\n",
+      "soy  5 en el ciclo:  5\n"
+     ]
+    }
+   ],
+   "source": [
+    "enter = 5\n",
+    "for i in range(1,enter+1):\n",
+    "    print(\"soy \", str(i), \"en el ciclo: \",str(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -175,6 +306,28 @@
    "metadata": {},
    "source": [
     "6) Utilizar un ciclo while para realizar el factorial de un número guardado en una variable, sólo si la variable contiene un número entero mayor a 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero = 5\n",
+    "resultado = 5\n",
+    "while (numero>2):\n",
+    "    resultado=resultado*(numero-1)\n",
+    "    numero-=1\n",
+    "print(resultado)"
    ]
   },
   {
@@ -239,6 +392,30 @@
    "metadata": {},
    "source": [
     "7) Crear un ciclo for dentro de un ciclo while"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 es mayor que 0 y estoy en el ciclo for numero:  1\n",
+      "3 es mayor que 0 y estoy en el ciclo for numero:  2\n",
+      "2 es mayor que 0 y estoy en el ciclo for numero:  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "hello = 4\n",
+    "while(hello>0):\n",
+    "    hello-=1\n",
+    "    for i in range (1,hello):\n",
+    "        print(str(hello), \"es mayor que 0 y estoy en el ciclo for numero: \", str(i))\n",
+    "    "
    ]
   },
   {
@@ -319,6 +496,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 es mayor que el ciclo numero: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "hey = 2\n",
+    "for i in range(1,3):\n",
+    "    while(hey-i>0):\n",
+    "        hey-=1\n",
+    "        print(str(hey), \"es mayor que el ciclo numero:\",str(i))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
@@ -354,7 +553,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 es primo\n",
+      "1 es primo\n",
+      "2 es primo\n",
+      "3 es primo\n",
+      "5 es primo\n",
+      "7 es primo\n",
+      "11 es primo\n",
+      "13 es primo\n",
+      "17 es primo\n",
+      "19 es primo\n",
+      "23 es primo\n",
+      "29 es primo\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,31):\n",
+    "    primo=True\n",
+    "    for y in range(2,round((i/2)+1)):\n",
+    "        if(i%y==0):\n",
+    "            primo=False\n",
+    "    if(primo==True):\n",
+    "        print(str(i), \"es primo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
