--- a/05 - Iteradores e Iterables/Prep_Course_Homework_05-Resuelto.ipynb
+++ b/05 - Iteradores e Iterables/Prep_Course_Homework_05-Resuelto.ipynb
@@ -16,6 +16,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-15, -14, -13, -12, -11, -10, -9, -8, -7, -6, -5, -4, -3, -2, -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ja = []\n",
+    "a = -15\n",
+    "while (a<0):\n",
+    "    ja.append(a)\n",
+    "    a+=1\n",
+    "print(ja)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -63,6 +85,33 @@
    "metadata": {},
    "source": [
     "2) ¿Con un ciclo while sería posible recorrer la lista para imprimir sólo los números pares?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-14\n",
+      "-12\n",
+      "-10\n",
+      "-8\n",
+      "-6\n",
+      "-4\n",
+      "-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=0\n",
+    "while(i<len(ja)):\n",
+    "    if(ja[i]%2==0):\n",
+    "        print(ja[i])\n",
+    "    i+=1"
    ]
   },
   {
@@ -141,6 +190,31 @@
    "metadata": {},
    "source": [
     "3) Resolver el punto anterior sin utilizar un ciclo while"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-14\n",
+      "-12\n",
+      "-10\n",
+      "-8\n",
+      "-6\n",
+      "-4\n",
+      "-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in ja:\n",
+    "    if(i%2==0):\n",
+    "        print(i)    "
    ]
   },
   {
@@ -228,6 +302,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-15\n",
+      "-14\n",
+      "-13\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in ja[0:3]:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
@@ -271,6 +365,38 @@
    "metadata": {},
    "source": [
     "5) Utilizar la función **enumerate** para obtener dentro del iterable, tambien el índice al que corresponde el elemento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 -15\n",
+      "1 -14\n",
+      "2 -13\n",
+      "3 -12\n",
+      "4 -11\n",
+      "5 -10\n",
+      "6 -9\n",
+      "7 -8\n",
+      "8 -7\n",
+      "9 -6\n",
+      "10 -5\n",
+      "11 -4\n",
+      "12 -3\n",
+      "13 -2\n",
+      "14 -1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, elemento in enumerate(ja):\n",
+    "    print(i,elemento)\n"
    ]
   },
   {
@@ -338,10 +464,63 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6) Dada la siguiente lista de números enteros entre 1 y 20, crear un ciclo donde se completen los valores faltantes: lista = [1,2,5,7,8,10,13,14,15,17,20]"
+    "6) Dada la siguiente lista de números enteros entre 1 y 20, crear un ciclo donde se completen los valores faltantes: \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=0\n",
+    "ji = [1,2,5,7,8,10,13,14,15,17,20]\n",
+    "for i, elemento in enumerate(ji):\n",
+    "        if(i!=elemento-1):\n",
+    "                ji.insert(i,i+1)\n",
+    "print(ji)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i=0\n",
+    "je = [1,2,5,7,8,10,13,14,15,17,20]\n",
+    "for i, elemento in enumerate(je):\n",
+    "        if(i!=elemento-1):\n",
+    "                je.insert(i,i+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(je)"
    ]
   },
   {
@@ -419,6 +598,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597, 2584, 4181, 6765, 10946, 17711, 28657, 46368, 75025, 121393, 196418, 317811, 514229]\n"
+     ]
+    }
+   ],
+   "source": [
+    "jo = [0,1]\n",
+    "while(len(jo)<30):\n",
+    "    jo.append(jo[len(jo)-1]+jo[len(jo)-2])\n",
+    "print(jo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(jo))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -466,6 +682,23 @@
    "metadata": {},
    "source": [
     "8) Realizar la suma de todos elementos de la lista del punto anterior"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1346268\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum(jo))"
    ]
   },
   {
@@ -520,6 +753,30 @@
     "n<sub>i-4</sub> / n<sub>i-3</sub><br>\n",
     "n<sub>i-5</sub> / n<sub>i-4</sub><br>\n",
     " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6180339887482036\n",
+      "0.6180339887543226\n",
+      "0.618033988738303\n",
+      "0.6180339887802427\n",
+      "0.6180339886704432\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=29\n",
+    "while(i>24):\n",
+    "    print(jo[i-1]/jo[i])\n",
+    "    i-=1"
    ]
   },
   {
@@ -579,11 +836,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "cadena = 'Hola Mundo. Esto es una practica del lenguaje de programación Python'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "21\n",
+      "39\n",
+      "60\n",
+      "67\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, elemento in enumerate(cadena):\n",
+    "    if(elemento==\"n\"):\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cadena.index(\"n\"))"
    ]
   },
   {
@@ -650,6 +947,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['fruits', 'snacks', 'drinks'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "diccionario1={\n",
+    "    \"fruits\":[\"apple\", \"orange\", \"cherry\"],\n",
+    "    \"snacks\":[\"bread\",\"potatos\", \"fried chicken\"],\n",
+    "    \"drinks\":[\"soda\",\"lemonade\",\"yogurt\"]\n",
+    "}\n",
+    "print(diccionario1.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fruits\n",
+      "snacks\n",
+      "drinks\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in diccionario1:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
@@ -707,6 +1046,131 @@
    "metadata": {},
    "source": [
     "12) Convertir en una lista la variable \"cadena\" del punto 10 y luego recorrerla con un iterador "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H\n",
+      "o\n",
+      "l\n",
+      "a\n",
+      " \n",
+      "M\n",
+      "u\n",
+      "n\n",
+      "d\n",
+      "o\n",
+      ".\n",
+      " \n",
+      "E\n",
+      "s\n",
+      "t\n",
+      "o\n",
+      " \n",
+      "e\n",
+      "s\n",
+      " \n",
+      "u\n",
+      "n\n",
+      "a\n",
+      " \n",
+      "p\n",
+      "r\n",
+      "a\n",
+      "c\n",
+      "t\n",
+      "i\n",
+      "c\n",
+      "a\n",
+      " \n",
+      "d\n",
+      "e\n",
+      "l\n",
+      " \n",
+      "l\n",
+      "e\n",
+      "n\n",
+      "g\n",
+      "u\n",
+      "a\n",
+      "j\n",
+      "e\n",
+      " \n",
+      "d\n",
+      "e\n",
+      " \n",
+      "p\n",
+      "r\n",
+      "o\n",
+      "g\n",
+      "r\n",
+      "a\n",
+      "m\n",
+      "a\n",
+      "c\n",
+      "i\n",
+      "ó\n",
+      "n\n",
+      " \n",
+      "P\n",
+      "y\n",
+      "t\n",
+      "h\n",
+      "o\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "cadenaenlista = list(cadena)\n",
+    "for i in cadenaenlista:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H\n"
+     ]
+    }
+   ],
+   "source": [
+    "marcapaginas = iter(cadenaenlista)\n",
+    "print(next(marcapaginas))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l\n",
+      "a\n",
+      " \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(next(marcapaginas))\n",
+    "print(next(marcapaginas))\n",
+    "print(next(marcapaginas))"
    ]
   },
   {
@@ -1097,6 +1561,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((1, 'smart'), (2, 'kind'), (3, 'funny'))\n"
+     ]
+    }
+   ],
+   "source": [
+    "listilla1=[1,2,3]\n",
+    "listilla2=[\"smart\",\"kind\",\"funny\"]\n",
+    "resultado = tuple(zip(listilla1,listilla2))\n",
+    "print (resultado)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
    "outputs": [
@@ -1163,6 +1647,47 @@
    "source": [
     "14) A partir de la siguiente lista de números, crear una nueva sólo si el número es divisible por 7<br>\n",
     "lis = [18,21,29,32,35,42,56,60,63,71,84,90,91,100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21, 35, 42, 56, 63, 84, 91]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lis = [18,21,29,32,35,42,56,60,63,71,84,90,91,100]\n",
+    "divisible = []\n",
+    "for i in lis:\n",
+    "    if(i%7==0):\n",
+    "        divisible.append(i)\n",
+    "print(divisible)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21, 35, 42, 56, 63, 84, 91]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lis = [18,21,29,32,35,42,56,60,63,71,84,90,91,100]\n",
+    "siete = [i for i in lis if i%7==0]\n",
+    "print(siete)"
    ]
   },
   {
@@ -1238,6 +1763,31 @@
    "source": [
     "15) A partir de la lista de a continuación, contar la cantidad total de elementos que contiene, teniendo en cuenta que un elemento de la lista podría ser otra lista:<br>\n",
     "lis = [[1,2,3,4],'rojo','verde',[True,False,False],['uno','dos','tres']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "lis = [[1,2,3,4],'rojo','verde',[True,False,False],['uno','dos','tres']]\n",
+    "contador=0\n",
+    "for i in lis:\n",
+    "    if(type(i)==list):\n",
+    "        for e in i:\n",
+    "            contador+=1\n",
+    "    else:\n",
+    "        contador+=1\n",
+    "print(contador)"
    ]
   },
   {
@@ -1339,6 +1889,48 @@
    "metadata": {},
    "source": [
     "16) Tomar la lista del punto anterior y convertir cada elemento en una lista si no lo es"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3, 4], ['rojo'], ['verde'], [True, False, False], ['uno', 'dos', 'tres']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lis = [[1,2,3,4],'rojo','verde',[True,False,False],['uno','dos','tres']]\n",
+    "for i, elemento in enumerate(lis):\n",
+    "    if(type(elemento)!=list):\n",
+    "        lis[i]=[elemento]\n",
+    "print(lis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3, 4], ['r', 'o', 'j', 'o'], ['v', 'e', 'r', 'd', 'e'], [True, False, False], ['uno', 'dos', 'tres']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lis = [[1,2,3,4],'rojo','verde',[True,False,False],['uno','dos','tres']]\n",
+    "for i, elemento in enumerate(lis):\n",
+    "    if(type(elemento)!=list):\n",
+    "        lis[i]=list(elemento)\n",
+    "print(lis)"
    ]
   },
   {
