--- a/07 - Classes & OOP/Prep_Course_Homework_07-Resuelto.ipynb
+++ b/07 - Classes & OOP/Prep_Course_Homework_07-Resuelto.ipynb
@@ -19,6 +19,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Carro:\n",
+    "    def __init__(self, color,modelo,cilindrada):\n",
+    "        self.color = color\n",
+    "        self.modelo = modelo\n",
+    "        self.cilindrada = cilindrada\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "auto\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = Carro(\"Rojo\",\"auto\",2)\n",
+    "print(a.modelo)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -51,6 +82,54 @@
     "Acelerar<br>\n",
     "Frenar<br>\n",
     "Doblar<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Carro:\n",
+    "    def __init__(self, color,modelo,cilindrada):\n",
+    "        self.color = color\n",
+    "        self.modelo = modelo\n",
+    "        self.cilindrada = cilindrada\n",
+    "        self.velocidad = 0\n",
+    "        self.angulo = 0\n",
+    "    def Acelerar(self,vel):\n",
+    "        self.velocidad+=vel\n",
+    "    def Frenar(self,vel):\n",
+    "        self.velocidad-=vel\n",
+    "    def Doblar(self,angulo):\n",
+    "        self.angulo+=angulo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = Carro(\"verde\", \"moto\", 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "b.Acelerar(5)\n",
+    "print(b.velocidad)"
    ]
   },
   {
@@ -107,6 +186,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "objeto1 = Carro(\"rosado\",\"camioneta\",5)\n",
+    "objeto2 = Carro(\"plomo\",\"camion\",3)\n",
+    "objeto3 = Carro(\"azul\",\"auto\",2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "objeto1.Acelerar(10)\n",
+    "objeto2.Acelerar(15)\n",
+    "objeto3.Acelerar(12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "objeto1.Doblar(5)\n",
+    "objeto2.Doblar(8)\n",
+    "objeto3.Doblar(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "15\n",
+      "12\n",
+      "5\n",
+      "8\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(objeto1.velocidad)\n",
+    "print(objeto2.velocidad)\n",
+    "print(objeto3.velocidad)\n",
+    "print(objeto1.angulo)\n",
+    "print(objeto2.angulo)\n",
+    "print(objeto3.angulo)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -135,6 +274,61 @@
    "metadata": {},
    "source": [
     "4) Agregar a la clase Vehiculo, un método que muestre su estado, es decir, a que velocidad se encuentra y su dirección. Y otro método que muestre color, tipo y cilindrada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Carro:\n",
+    "    def __init__(self, color,modelo,cilindrada):\n",
+    "        self.color = color\n",
+    "        self.modelo = modelo\n",
+    "        self.cilindrada = cilindrada\n",
+    "        self.velocidad = 0\n",
+    "        self.angulo = 0\n",
+    "    def Acelerar(self,vel):\n",
+    "        self.velocidad+=vel\n",
+    "    def Frenar(self,vel):\n",
+    "        self.velocidad-=vel\n",
+    "    def Doblar(self,angulo):\n",
+    "        self.angulo+=angulo\n",
+    "    def Estado(self):\n",
+    "        print(\"Se encuentra a una velocidad de: \", str(self.velocidad),\" y una direccion de: \",str(self.angulo))\n",
+    "    def Atributos(self):\n",
+    "        print(\"Su color es: \", self.color, \" su tipo es: \", self.modelo, \"con una cilindrara de: \", str(self.cilindrada))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "objeto1 = Carro(\"rosado\",\"camioneta\",5)\n",
+    "objeto1.Acelerar(10)\n",
+    "objeto1.Doblar(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se encuentra a una velocidad de:  10  y una direccion de:  5\n",
+      "Su color es:  rosado  su tipo es:  camioneta con una cilindrara de:  5\n"
+     ]
+    }
+   ],
+   "source": [
+    "objeto1.Estado()\n",
+    "objeto1.Atributos()"
    ]
   },
   {
@@ -218,7 +412,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Operaciones:\n",
+    "    def __init__(self) -> None:\n",
+    "        pass\n",
+    "    def VerificarPrimo(self, numero):\n",
+    "        primo = True\n",
+    "        for i in range(2,round(numero/2)+1):\n",
+    "            if(numero%i==0):\n",
+    "                primo=False\n",
+    "                break\n",
+    "        return primo\n",
+    "    def ValorModal(self,lista):\n",
+    "        contador = 0\n",
+    "        numero = 0\n",
+    "        for i in lista:\n",
+    "            if(lista.count(i)>contador):\n",
+    "                contador=lista.count(i)\n",
+    "                numero=i\n",
+    "        return contador, numero\n",
+    "    def ConversionGrados(self,valor, origen, destino):\n",
+    "        if (origen == 'celsius'):\n",
+    "            if (destino == 'celsius'):\n",
+    "                valor_destino = valor\n",
+    "            elif (destino == 'farenheit'):\n",
+    "                valor_destino = (valor * 9 / 5) + 32\n",
+    "            elif (destino == 'kelvin'):\n",
+    "                valor_destino = valor + 273.15\n",
+    "            else:\n",
+    "                print('Parámetro de Destino incorrecto')\n",
+    "        elif (origen == 'farenheit'):\n",
+    "            if (destino == 'celsius'):\n",
+    "                valor_destino = (valor - 32) * 5 / 9\n",
+    "            elif (destino == 'farenheit'):\n",
+    "                valor_destino = valor\n",
+    "            elif (destino == 'kelvin'):\n",
+    "                valor_destino = ((valor - 32) * 5 / 9) + 273.15\n",
+    "            else:\n",
+    "                print('Parámetro de Destino incorrecto')\n",
+    "        elif (origen == 'kelvin'):\n",
+    "            if (destino == 'celsius'):\n",
+    "                valor_destino = valor - 273.15\n",
+    "            elif (destino == 'farenheit'):\n",
+    "                valor_destino = ((valor - 273.15) * 9 / 5) + 32\n",
+    "            elif (destino == 'kelvin'):\n",
+    "                valor_destino = valor\n",
+    "            else:\n",
+    "                print('Parámetro de Destino incorrecto')\n",
+    "        else:\n",
+    "            print('Parámetro de Origen incorrecto')\n",
+    "        return valor_destino\n",
+    "    def factorial(self,a):\n",
+    "        if(type(a)!=int):\n",
+    "            return \"el numero debe ser un entero\"\n",
+    "        if(a<0):\n",
+    "            return \"el numero debe ser positivo\"\n",
+    "        if(a>1):\n",
+    "            a=a*self.factorial(a-1)\n",
+    "        return a\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opera = Operaciones()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opera.VerificarPrimo(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,6 +603,26 @@
    "metadata": {},
    "source": [
     "6) Probar las funciones incorporadas en la clase del punto 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opera.factorial(3)"
    ]
   },
   {
@@ -689,7 +997,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
