--- a/02 - Variables y Tipos de Datos/Prep_Course_Homework_02-Resuelto Clase.ipynb
+++ b/02 - Variables y Tipos de Datos/Prep_Course_Homework_02-Resuelto Clase.ipynb
@@ -16,20 +16,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "3\n"
      ]
     }
    ],
    "source": [
-    "a = 5\n",
-    "print(a)"
+    "a = 3\n",
+    "print(a)\n",
+    "# a = 5\n",
+    "# print(a)"
    ]
   },
   {
