--- a/04 - Estructuras de datos/Prep_Course_Homework_04-Resuelto.ipynb
+++ b/04 - Estructuras de datos/Prep_Course_Homework_04-Resuelto.ipynb
@@ -16,6 +16,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['lima', 'bogota', 'santiago', 'buenos aires', 'quito', 'asuncion']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = [\"lima\",\"bogota\",\"santiago\",\"buenos aires\",\"quito\",\"asuncion\"]\n",
+    "print(lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 66,
    "metadata": {},
    "outputs": [
@@ -59,6 +77,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bogota\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lista[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -96,6 +131,23 @@
    "metadata": {},
    "source": [
     "3) Imprimir por pantalla del segundo al cuarto elemento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bogota', 'santiago', 'buenos aires']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lista[1:4])"
    ]
   },
   {
@@ -153,6 +205,23 @@
     }
    ],
    "source": [
+    "print(type(lista))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
     "print(type(cities))"
    ]
   },
@@ -178,6 +247,23 @@
    "metadata": {},
    "source": [
     "5) Visualizar todos los elementos de la lista a partir del tercero de manera genérica, es decir, sin explicitar la posición del último elemento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['santiago', 'buenos aires', 'quito', 'asuncion']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lista[2:])"
    ]
   },
   {
@@ -223,6 +309,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['lima', 'bogota', 'santiago', 'buenos aires']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lista[:4])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -262,6 +365,32 @@
    "source": [
     "7) Agregar una ciudad más a la lista que ya exista y otra que no ¿Arroja algún tipo de error?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['lima', 'bogota', 'santiago', 'buenos aires', 'quito', 'asuncion', 'lima', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista.append(\"lima\")\n",
+    "lista.append(\"san jose\")\n",
+    "print(lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -354,6 +483,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lista.insert(3, \"la habana\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
@@ -409,6 +555,25 @@
    "metadata": {},
    "source": [
     "9) Concatenar otra lista a la ya creada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['lima', 'bogota', 'santiago', 'la habana', 'buenos aires', 'quito', 'asuncion', 'lima', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'ate', 'sjl']\n"
+     ]
+    }
+   ],
+   "source": [
+    "listilla = [\"ate\",\"sjl\"]\n",
+    "lista.extend(listilla)\n",
+    "print(lista)"
    ]
   },
   {
@@ -473,6 +638,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lista.index(\"lima\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [
@@ -510,6 +692,27 @@
    "metadata": {},
    "source": [
     "11) ¿Qué pasa si se busca un elemento que no existe?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "'jajajaja' is not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\ESTEFANY\\OneDrive\\Escritorio\\DATA SCIENCE\\Python-Prep\\04 - Estructuras de datos\\Prep_Course_Homework_04-Resuelto.ipynb Cell 52\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/ESTEFANY/OneDrive/Escritorio/DATA%20SCIENCE/Python-Prep/04%20-%20Estructuras%20de%20datos/Prep_Course_Homework_04-Resuelto.ipynb#Y214sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(lista\u001b[39m.\u001b[39;49mindex(\u001b[39m\"\u001b[39;49m\u001b[39mjajajaja\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n",
+      "\u001b[1;31mValueError\u001b[0m: 'jajajaja' is not in list"
+     ]
+    }
+   ],
+   "source": [
+    "print(lista.index(\"jajajaja\"))"
    ]
   },
   {
@@ -559,6 +762,42 @@
    "metadata": {},
    "source": [
     "12) Eliminar un elemento de la lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sjl\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lista.pop())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "['bogota', 'santiago', 'la habana', 'buenos aires', 'quito', 'asuncion', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'ate']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lista.remove(\"lima\"))\n",
+    "print(lista)"
    ]
   },
   {
@@ -630,6 +869,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "list.remove(x): x not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\ESTEFANY\\OneDrive\\Escritorio\\DATA SCIENCE\\Python-Prep\\04 - Estructuras de datos\\Prep_Course_Homework_04-Resuelto.ipynb Cell 63\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/ESTEFANY/OneDrive/Escritorio/DATA%20SCIENCE/Python-Prep/04%20-%20Estructuras%20de%20datos/Prep_Course_Homework_04-Resuelto.ipynb#Y220sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m lista\u001b[39m.\u001b[39;49mremove(\u001b[39m\"\u001b[39;49m\u001b[39mjejejejeje\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ESTEFANY/OneDrive/Escritorio/DATA%20SCIENCE/Python-Prep/04%20-%20Estructuras%20de%20datos/Prep_Course_Homework_04-Resuelto.ipynb#Y220sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(lista)\n",
+      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
+     ]
+    }
+   ],
+   "source": [
+    "lista.remove(\"jejejejeje\")\n",
+    "print(lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [
@@ -696,6 +957,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ate\n"
+     ]
+    }
+   ],
+   "source": [
+    "variable = lista.pop()\n",
+    "print(variable)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [
@@ -711,13 +990,6 @@
     "ultimo = cities.pop()\n",
     "print(ultimo)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -763,6 +1035,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bogota', 'santiago', 'la habana', 'buenos aires', 'quito', 'asuncion', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'bogota', 'santiago', 'la habana', 'buenos aires', 'quito', 'asuncion', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'bogota', 'santiago', 'la habana', 'buenos aires', 'quito', 'asuncion', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'bogota', 'santiago', 'la habana', 'buenos aires', 'quito', 'asuncion', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lista*4)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
@@ -800,6 +1089,24 @@
    "metadata": {},
    "source": [
     "16) Crear una tupla que contenga los números enteros del 1 al 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuplaa =tuple(range(1,21))\n",
+    "print(tuplaa)"
    ]
   },
   {
@@ -901,6 +1208,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(11, 12, 13, 14, 15, 16)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tuplaa[10:16])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
    "outputs": [
@@ -938,6 +1262,40 @@
    "metadata": {},
    "source": [
     "18) Evaluar si los números 20 y 30 están dentro de la tupla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(20 in tuplaa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(30 in tuplaa)"
    ]
   },
   {
@@ -1002,6 +1360,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if((\"París\" in lista)==False):\n",
+    "    lista.append(\"París\")\n",
+    "    print(\"Se agrego el elemento\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'París'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se agrego el elemento\n"
+     ]
+    }
+   ],
+   "source": [
+    "if((\"París\" in lista)==False):\n",
+    "    lista.append(\"París\")\n",
+    "    print(\"Se agrego el elemento\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bogota', 'santiago', 'la habana', 'buenos aires', 'quito', 'asuncion', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'París']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 75,
    "metadata": {},
    "outputs": [
@@ -1053,6 +1478,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lista.count(\"lima\"))\n",
+    "print(tuplaa.count(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 77,
    "metadata": {},
    "outputs": [
@@ -1096,6 +1540,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "newlista = list(tuplaa)\n",
+    "print(newlista)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 79,
    "metadata": {},
    "outputs": [
@@ -1135,6 +1597,28 @@
    "metadata": {},
    "source": [
     "22) Desempaquetar solo los primeros 3 elementos de la tupla en 3 variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "var1,var2,var3,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,=tuplaa\n",
+    "print(var1)\n",
+    "print(var2)\n",
+    "print(var3)"
    ]
   },
   {
@@ -1190,9 +1674,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ciudad': ['bogota', 'santiago', 'la habana', 'buenos aires', 'quito', 'asuncion', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'París'], 'Pais': ['Perú', 'Canada'], 'Continente': ['America', 'Europa']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dicci = {\"ciudad\":lista,\n",
+    "         \"Pais\":[\"Perú\",\"Canada\"],\n",
+    "         \"Continente\":[\"America\",\"Europa\"]}\n",
+    "print(dicci)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cities' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\ESTEFANY\\OneDrive\\Escritorio\\DATA SCIENCE\\Python-Prep\\04 - Estructuras de datos\\Prep_Course_Homework_04-Resuelto.ipynb Cell 114\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ESTEFANY/OneDrive/Escritorio/DATA%20SCIENCE/Python-Prep/04%20-%20Estructuras%20de%20datos/Prep_Course_Homework_04-Resuelto.ipynb#Y151sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m diccio \u001b[39m=\u001b[39m {\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/ESTEFANY/OneDrive/Escritorio/DATA%20SCIENCE/Python-Prep/04%20-%20Estructuras%20de%20datos/Prep_Course_Homework_04-Resuelto.ipynb#Y151sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mciudad\u001b[39m\u001b[39m\"\u001b[39m:cities,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ESTEFANY/OneDrive/Escritorio/DATA%20SCIENCE/Python-Prep/04%20-%20Estructuras%20de%20datos/Prep_Course_Homework_04-Resuelto.ipynb#Y151sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mcontinentes\u001b[39m\u001b[39m\"\u001b[39m:[\u001b[39m\"\u001b[39m\u001b[39mAmerica\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mEuropa\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mAsia\u001b[39m\u001b[39m\"\u001b[39m],\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ESTEFANY/OneDrive/Escritorio/DATA%20SCIENCE/Python-Prep/04%20-%20Estructuras%20de%20datos/Prep_Course_Homework_04-Resuelto.ipynb#Y151sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mpaises\u001b[39m\u001b[39m\"\u001b[39m:countries,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ESTEFANY/OneDrive/Escritorio/DATA%20SCIENCE/Python-Prep/04%20-%20Estructuras%20de%20datos/Prep_Course_Homework_04-Resuelto.ipynb#Y151sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m }\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'cities' is not defined"
+     ]
+    }
+   ],
    "source": [
     "diccio = {\n",
     "    \"ciudad\":cities,\n",
@@ -1255,6 +1771,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['ciudad', 'Pais', 'Continente'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dicci.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 88,
    "metadata": {},
    "outputs": [
@@ -1292,6 +1825,23 @@
    "metadata": {},
    "source": [
     "25) Imprimir las ciudades a través de su clave"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bogota', 'santiago', 'la habana', 'buenos aires', 'quito', 'asuncion', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'lima', 'san jose', 'París']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dicci[\"ciudad\"])"
    ]
   },
   {
