--- a/06 - Funciones/Prep_Course_Homework_06-Resuelto.ipynb
+++ b/06 - Funciones/Prep_Course_Homework_06-Resuelto.ipynb
@@ -16,6 +16,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pr(a):\n",
+    "    primo = True\n",
+    "    for i in range(2,round(a/2)+1):\n",
+    "        if(a%i==0):\n",
+    "            primo=False\n",
+    "            break\n",
+    "    return primo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pr(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pr(12)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
@@ -27,26 +82,6 @@
     "            valor = False\n",
     "            break\n",
     "    return valor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "primo(5)"
    ]
   },
   {
@@ -69,6 +104,37 @@
    "metadata": {},
    "source": [
     "2) Utilizando la función del punto 1, realizar otra función que reciba de parámetro una lista de números y devuelva sólo aquellos que son primos en otra lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lista(a):\n",
+    "    b=[i for i in a if pr(i)]\n",
+    "    return b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 5, 7]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista([3,4,5,6,7,8,9,10])"
    ]
   },
   {
@@ -145,6 +211,42 @@
    "metadata": {},
    "source": [
     "3) Crear una función que al recibir una lista de números, devuelva el que más se repite y cuántas veces lo hace. Si hay más de un \"más repetido\", que devuelva cualquiera"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def repeticua(a):\n",
+    "    contador = 0\n",
+    "    numero = 0\n",
+    "    for i in a:\n",
+    "        if(a.count(i)>contador):\n",
+    "            contador=a.count(i)\n",
+    "            numero=i\n",
+    "    return contador, numero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 1)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repeticua([0,0,0,1,1,1,1,5,2,3])"
    ]
   },
   {
@@ -236,6 +338,49 @@
    "metadata": {},
    "source": [
     "4) A la función del punto 3, agregar un parámetro más, que permita elegir si se requiere el menor o el mayor de los mas repetidos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def repeti(a,b):\n",
+    "    contador = 1\n",
+    "    numero = 0\n",
+    "    if(b==\"máximo\"):\n",
+    "        for i in a:\n",
+    "            if(a.count(i)>=contador):\n",
+    "                contador=a.count(i)\n",
+    "                numero=i\n",
+    "        return contador, numero\n",
+    "    else:\n",
+    "        for i in a:\n",
+    "            if(a.count(i)<=contador):\n",
+    "                contador=a.count(i)\n",
+    "                numero=i\n",
+    "        return contador, numero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 3)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repeti([0,0,0,1,1,1,1,5,2,3],\"máxim\")"
    ]
   },
   {
@@ -488,7 +633,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fact(a):\n",
+    "    if(type(a)!=int):\n",
+    "        return \"el numero debe ser un entero\"\n",
+    "    if(a<0):\n",
+    "        return \"el numero debe ser positivo\"\n",
+    "    if(a>1):\n",
+    "        a=a*fact(a-1)\n",
+    "    return a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fact(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,20 +685,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3628800\n"
+      "1\n"
      ]
     }
    ],
    "source": [
-    "print(factoria(10))"
+    "print(factoria(1))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
